# learn_with_edu_chain

./: .env  Cargo.toml  README.md  package-lock.json  package.json
.sqlx/: query-b6e0c9288276d1fef6bd7c74cba517672a61183441c9a061f8bdb73d5549348e.json  query-c4887ef933a5a00b9a9e98a07f607141fc172a9b3bad88cb139345c161a4f705.json  query-e0756c6cca33280d8a3bdda6363e882e98582712fb7daf69329d094d2368e713.json
Proje_Nesne_Hareketler/: Proje_Nesne_Hareketler.sln
Proje_Nesne_Hareketler/Proje_Nesne_Hareketler/: Form1.Designer.cs  Form1.cs  Form1.resx  Proje_Nesne_Hareketler.csproj
Proje_Nesne_Hareketler/Proje_Nesne_Hareketler/Properties/: AssemblyInfo.cs  Settings.Designer.cs
contracts/: abi.json
migrations/: 20250103095716_create_tables.sql
src/: lib.rs  main.rs
src/api/: certificates.rs  courses.rs  mod.rs
src/blockchain/: mod.rs
src/frontend/: package-lock.json  package.json
src/frontend/src/: Dashboard.js  index.js
src/models/: certificate.rs  course.rs  mod.rs
src/services/: course_service.rs  mod.rs
