[package]
name = "learn_with_edu_chain"  # opencampus_education yerine learn_with_edu_chain
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
web3 = { version = "0.19.0", features = ["signing"] }
ethers = "2.0"
oauth2 = "4.4"
dotenv = "0.15"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
thiserror = "1.0"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json"] }
actix-cors = "0.6"